# quant_strategies

./: .gitignore  AGENTS.md  FOUNDATION_LOCK.md  HISTORY.md  LIVE_FEASIBILITY_FOUNDATION_REVIEW.md  Makefile  PERF_REVIEW_crypto_perp_funding_crowding_reversal.md  PRD.md  PRODUCT_REQUIREMENTS.md  README.md  TODOS.md  foundation-review-2026-06-12.md  live-trade-feasibility-review-2026-06-10.md  progress.md  pyproject.toml  review-claude.md  review-codex.md
candidates/crypto_perp_funding_carry_tilt/: run.toml  strategy.py
candidates/crypto_perp_funding_crowding_reversal/: run.toml  strategy.py
candidates/crypto_perp_multivote_trend_following/: run.toml  strategy.py
candidates/crypto_perp_tsmom_vol_target/: run.toml  strategy.py
candidates/fx_session_activity_profile_rejection/: run.toml
candidates/fx_triangular_residual_reversion/: run.toml  strategy.py
candidates/krohn_mueller_whelan_fix_reversal/: run.toml  strategy.py
constraints/: evaluation.txt
docs/: foundation-surfaces.md  quant-autoresearch-consumer.md  quant-data-upstream-contract.md  research-process.md  runner.md  validation.md  vectorbtpro.md
docs/consumer/: MIGRATION-portfolio-book-spine.md  README.md  integration.md  migration.md  reference.md  usage-guide.md
docs/research/: crypto_perp_volume_profile_strategies.md  fx_activity_profile_strategies.md
docs/reviews/: 2026-05-26-foundation-review-quant-research.md  2026-05-26-foundation-review.md  2026-05-29-foundation-claude-v2.md  2026-05-29-foundation-codex.md  2026-05-29-review-convergence.md  README.md  (+16 more)
notebooks/: crypto_strategy_run_validation_walkthrough.ipynb
plans/: phase1-p1-trust.md  phase2-p1-workflow.md  phase3-p2-architecture.md  phase5-p3-hardening.md
runs/: crypto_perp_autoresearch_ensemble.toml  crypto_perp_autoresearch_ensemble_smoke.toml  crypto_perp_funding_crowding_reversal.toml  crypto_perp_funding_crowding_reversal_smoke.toml  crypto_perp_multivote_trend_following.toml  fx_session_activity_profile_rejection.toml  fx_triangular_residual_quote.toml  fx_triangular_residual_quote_smoke.toml  krohn_mueller_whelan_fix_reversal.toml  krohn_mueller_whelan_fix_reversal_smoke.toml  simple_momentum_spy_daily.toml
tested/: simple_momentum.py
tests/: candidate_loader.py  engine_helpers.py  test_agreement_oracle.py  test_boundary.py  test_crypto_perp_autoresearch_ensemble.py  test_crypto_perp_funding_crowding_reversal.py  test_crypto_perp_multivote_trend_following.py  test_data_contract.py  test_data_readiness.py  test_decision_models.py  test_decision_strategy_loader.py  test_engine_executable.py  test_engine_models.py  test_engine_no_autonomous_state.py  test_engine_screen.py  test_engine_validate_and_evidence.py  test_evaluation_artifacts.py  test_evaluation_backend.py  test_evaluation_cli.py  test_evaluation_config.py  test_evaluation_dependencies.py  test_evaluation_docs.py  test_evaluation_fold_returns.py  test_evaluation_runner.py  test_evaluation_scenarios.py  test_funding.py  test_fx_session_activity_profile_rejection.py  test_fx_triangular_residual_reversion.py  test_internal_engine_boundary.py  test_krohn_mueller_whelan_fix_reversal.py  test_performance_regressions.py  test_phase5_performance.py  test_portfolio_foundation.py  test_prepared_run_data.py  test_quant_data_contract_smoke.py  test_readme_contract.py  test_repository_boundaries.py  test_researched_crypto_perp_validation_contract.py  test_result_success_contract.py  test_runner_api_cli.py  (+28 more)
untested/: crypto_perp_autoresearch_ensemble.py  crypto_perp_funding_crowding_reversal.py  crypto_perp_multivote_trend_following.py  fx_triangular_residual_reversion.py  krohn_mueller_whelan_fix_reversal.py
(+860 files in other folders)
