[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-strategies"
version = "0.1.0"
description = "Flat strategy library and explicit quant strategy runner."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "quant-data",
]

[project.optional-dependencies]
vectorbtpro = [
    "pandas>=2.2",
    "vectorbtpro",
]
evaluation = [
    "pandas>=2.2",
    "pyarrow>=16",
    "vectorbtpro",
]

[project.scripts]
quant-strategies = "quant_strategies.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [".", "src"]
testpaths = ["tests"]
